--- a/training-model.ipynb
+++ b/training-model.ipynb
@@ -16,9 +16,6 @@
     "- Pada studi kasus saat ini yaitu melakukan proses topic modeling, dimana data diambil dari kaggle. dataset sendiri merupakan artikel yang berasal dari salah satu platform berita indonesia yaitu kompas, dimana artikel berita dalam rentang waktu 2019-2020. karena volume data yang terlalu besar sehingga sangat sulit untuk mengehtahui topik utama yang sedang tren pada tahun 2019 - 2020, sulit menyaring informasi yang relavan secara cepat. Untuk itu topic modeling disini menjadi sebuah solusi untuk mengehtahui struktur atau makna yang tersembunyi dalam sebuah dokumen.\n",
     "\n",
     "- Fokus analisis\n",
-    "  - bagaiman distribusi topik berubah dari tahun 2019 - 2020\n",
-    "  - apakah terdapat topik yang dominan antara tahun 2019 dan 2020?\n",
-    "  - topik apa yang sering dibicarakan pada tahun 2019 dan 2020?\n",
     "  - apa saja kata kunci yang paling mewakili setiap topik?\n",
     "  - melakukan perbandingan model antara LDA dan BERTopic"
    ]
@@ -1356,7 +1353,8 @@
     "- Berdasarkan hal yang telah dijelaskan sebelumnya model LDA mempu menghasilkan topic yang lebih baik dibandingkan model BERTopic hal ini dapat dilihat dari hasil evaluasi yang telah dilakukan. terutama pada perbandingan hasil topic yang dihasilkan.\n",
     "\n",
     "- keunggulan LDA yaitu cendrung ringan, mampu menangani data yang besar, setiap topik yang ada didasarkan dari distribusi kata.\n",
-    "- keunggulan BERTopic adalah mudah dalam menyatukan topic topic yag mirip, memiliki sifat yang lebih fleksibel"
+    "- keunggulan BERTopic adalah mudah dalam menyatukan topic topic yag mirip, memiliki sifat yang lebih fleksibel\n",
+    "- untuk topic yang sering muncul dari kedua model yang digunakan yaitu FILM, Politic, Sport, transportasi, teknologi"
    ]
   },
   {
